--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+    <meta charset="utf-8" />
+    <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
 
+    <script src="cordova.js"></script>
+    <script src="kendo/js/jquery.min.js"></script>
+    <script src="kendo/js/kendo.mobile.min.js"></script>
+    <script type="text/javascript">
+        function onPageLoad(url) {
+
+            window.location.replace(url);
+
+        }
+    </script>
+</head>
+<body onload="onPageLoad('https://cmtindiaonline.accenture.com/DigitalMe/')">
+
+</body>
+</html>
