--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-    <meta charset="utf-8" />
-    <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
+<!DOCTYPE html> 
+<html> 
 
-    <script src="cordova.js"></script>
-    <script src="kendo/js/jquery.min.js"></script>
-    <script src="kendo/js/kendo.mobile.min.js"></script>
+<head>
+    <title>Untitled Page</title>
+
     <script type="text/javascript">
+
+      
         function onPageLoad(url) {
 
             window.location.replace(url);
 
         }
-    </script>
-</head>
-<body onload="onPageLoad('https://cmtindiaonline.accenture.com/DigitalMe/')">
+    </script> 
+
+</head> 
+
+<!-- <body onload="onPageLoad('https://cmtindiaonline.accenture.com/DigitalMe/')"> -->
+
+<body>
+
+<p> 
+        <input id="Button1" type="button" onclick="https://cmtindiaonline.accenture.com/mobile1" value="Call App 1" /></p>
+    <p>
+        <input id="Button2" type="button" onclick="https://cmtindiaonline.accenture.com/mobile2" value="Call App 2" /></p>
+    <p>
+        <input id="Button3" type="button" onclick="https://cmtindiaonline.accenture.com/mobile3" value="Call App 3" /></p>
+    <p>
+        <input id="Button4" type="button" onclick="https://cmtindiaonline.accenture.com/mobile4" value="Call App 4" /></p>
+    <p>
+        <input id="Button5" type="button" onclick="https://cmtindiaonline.accenture.com/mobile5" value="Call App 5" /></p>
+    <p>
+        <input id="Button6" type="button" onclick="https://cmtindiaonline.accenture.com/mobile6" value="Call App 6" /></p>
+    <p>
+        <input id="Button7" type="button" onclick="https://cmtindiaonline.accenture.com/mobile7" value="Call App 7" /></p>
+    <p>
+        <input id="Button8" type="button" onclick="https://cmtindiaonline.accenture.com/mobile8" value="Call App 8" /></p>
+
 
 </body>
 </html>
+
