--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
 
       
-        function onPageLoad(url) {
+        function OpenPage(url) {
 
             window.location.replace(url);
 
@@ -16,28 +16,26 @@
 
 </head> 
 
-<!-- <body onload="onPageLoad('https://cmtindiaonline.accenture.com/DigitalMe/')"> -->
 
 <body>
 
 <p> 
-        <input id="Button1" type="button" onclick="https://cmtindiaonline.accenture.com/mobile1" value="Call App 1" /></p>
+        <input id="Button1" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile1')" value="Call App 1" /></p>
     <p>
-        <input id="Button2" type="button" onclick="https://cmtindiaonline.accenture.com/mobile2" value="Call App 2" /></p>
+        <input id="Button2" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile2')" value="Call App 2" /></p>
     <p>
-        <input id="Button3" type="button" onclick="https://cmtindiaonline.accenture.com/mobile3" value="Call App 3" /></p>
+        <input id="Button3" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile3')" value="Call App 3" /></p>
     <p>
-        <input id="Button4" type="button" onclick="https://cmtindiaonline.accenture.com/mobile4" value="Call App 4" /></p>
+        <input id="Button4" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile4')" value="Call App 4" /></p>
     <p>
-        <input id="Button5" type="button" onclick="https://cmtindiaonline.accenture.com/mobile5" value="Call App 5" /></p>
+        <input id="Button5" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile5')" value="Call App 5" /></p>
     <p>
-        <input id="Button6" type="button" onclick="https://cmtindiaonline.accenture.com/mobile6" value="Call App 6" /></p>
+        <input id="Button6" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile6')" value="Call App 6" /></p>
     <p>
-        <input id="Button7" type="button" onclick="https://cmtindiaonline.accenture.com/mobile7" value="Call App 7" /></p>
+        <input id="Button7" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile7')" value="Call App 7" /></p>
     <p>
-        <input id="Button8" type="button" onclick="https://cmtindiaonline.accenture.com/mobile8" value="Call App 8" /></p>
+        <input id="Button8" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile8')" value="Call App 8" /></p>
 
 
 </body>
 </html>
-
