--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
 <body>
 
 <p> 
-        <input id="Button1" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile1')" value="Call App 1" /></p>
+        <input id="Button1" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobile1')" value="Call App 1" /></p>
     <p>
-        <input id="Button2" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile2')" value="Call App 2" /></p>
+        <input id="Button2" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobile2')" value="Call App 2" /></p>
     <p>
-        <input id="Button3" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile3')" value="Call App 3" /></p>
+        <input id="Button3" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobile3')" value="Call App 3" /></p>
     <p>
-        <input id="Button4" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile4')" value="Call App 4" /></p>
+        <input id="Button4" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobile4')" value="Call App 4" /></p>
     <p>
-        <input id="Button5" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile5')" value="Call App 5" /></p>
+        <input id="Button5" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobile5')" value="Call App 5" /></p>
     <p>
-        <input id="Button6" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile6')" value="Call App 6" /></p>
+        <input id="Button6" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobile6')" value="Call App 6" /></p>
     <p>
-        <input id="Button7" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile7')" value="Call App 7" /></p>
+        <input id="Button7" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobile7')" value="Call App 7" /></p>
     <p>
-        <input id="Button8" type="button" onclick="OpenPage('https://cmtindiaonline.accenture.com/mobile8')" value="Call App 8" /></p>
+        <input id="Button8" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobile8')" value="Call App 8" /></p>
 
+        <p>        <input id="Button8" type="button" onclick="OpenPage('https://GoDigital.accenture.com/mobileHR')" value="Call App HR" /></p>
 
 </body>
 </html>
